# nix-tree-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  lib.rs  main.rs  nix.rs  path_stats.rs  store_path.rs
src/ui/: app.rs  mod.rs  pane.rs  widgets.rs
tests/: integration.rs  ui_test.rs
